Added some scripts

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Hiragana</title>
+  <title>Japanese for Engineers</title>
   <meta name="description" 
-  content="Just move to Japan? Can't read a single sign on the street? Why not practice how to read Japanese characters.">
-  <meta name="author" content="rinanamiwa">
+  content="Just move to Japan? Don't recognize a single sign on the street? Why not practice how to read Japanese characters.">
+  <meta name="author" content="Rina Namiwa">
 
   <link rel="stylesheet" href="styles.css?v=1.0">
 
@@ -56,7 +56,7 @@ You can click each character on the tables and check you recognize hiragana to t
 <div class="category-container">
 	<div>
 		<ul>
-			<li><a>Greeting</a></li>
+			<li><a class="greetings">Greetings</a></li>
 			<li><a>Country</a></li>
 			<li><a>City</a></li>
 		</ul>
@@ -68,7 +68,8 @@ You can click each character on the tables and check you recognize hiragana to t
 	<div class="question-section-container">
 		<div class="back-container"><button class="back-button">Back</button></div>
 		<div class="question-container">
-			<div></div>
+			<div class="english">english</div>
+			<div class="romaji">romaji</div>
 		</div>
 		<div class="next-container"><button>Next</button></div>
 	</div>
@@ -77,7 +78,7 @@ You can click each character on the tables and check you recognize hiragana to t
 <!--Disply user input-->
 <div class="answer-section-container">
 	<div class="answer">
-		<p>user input should be displayed here</p>
+		<p class="">Your Answer Here</p>
 	</div>
 </div>
 
