--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Japanese for Engineers</title>
   <meta name="description" 
-  content="Just move to Japan? Don't recognize a single sign on the street? Why not practice how to read Japanese characters.">
+  content="Just moved to Japan? Don't recognize a single sign on the street? Why not practice how to read Japanese characters.">
   <meta name="author" content="Rina Namiwa">
 
   <link rel="stylesheet" href="styles.css?v=1.0">
@@ -57,8 +57,8 @@ You can click each character on the tables and check you recognize hiragana to t
 	<div>
 		<ul>
 			<li><a class="greetings">Greetings</a></li>
-			<li><a>Country</a></li>
-			<li><a>City</a></li>
+			<li><a class=""></a></li>
+			<li><a class=""></a></li>
 		</ul>
 	</div>
 </div>
@@ -71,15 +71,16 @@ You can click each character on the tables and check you recognize hiragana to t
 			<div class="english">english</div>
 			<div class="romaji">romaji</div>
 		</div>
-		<div class="next-container"><button>Next</button></div>
+		<div class="next-container"><button class="next-button">Next</button></div>
 	</div>
 </div>
 
 <!--Disply user input-->
 <div class="answer-section-container">
 	<div class="answer">
-		<p class="">Your Answer Here</p>
+		<p class="hiraganaOutput default-message">Your Answer Here</p>
 	</div>
+	<button>Reset</button>
 </div>
 
 
