added reset button function IP

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@ You can click each character on the tables and check you recognize hiragana to t
 <!--Disply user input-->
 <div class="answer-section-container">
 	<div class="answer">
-		<p class="hiraganaOutput default-message">Your Answer Here</p>
+		<p class="default-message">Find Hiragana Characters!</p>
+		<p class="hiraganaOutput"></p>
 	</div>
-	<button>Reset</button>
+	<button class="reset-button" id="reset-button">Reset</button>
+	<button class="answer-button" id="answer-button">Answer</button>
 </div>
 
 
