changed dropdowncontent functions

--- a/index.html
+++ b/index.html
@@ -23,20 +23,27 @@
 <header>
 	<nav class="nav-container">
 		<ul>
-			<li><a href="/">Home</a></li>
+			<li><a href="#">Home</a></li>
 			<li><a href="#">Hiragana</a></li>
 			<li><a href="#">Katakana</a></li>
 		</ul>
 		<div class="nav-dropdown">
 			<a class="nav-grammar" href="#">Grammar</a>
+				<div class="dropdown-content-grammar">
+					<a href="">N1</a>
+					<a href="">N2</a>
+					<a href="">N3</a>					
+					<a href="">N4</a>
+					<a href="">N5</a>
+				</div>
 			<a class="nav-5w1h" href="#">5W1H</a>
-				<div class="dropdown-container mouseout">
-					<a class="dropdown-content" href="#">What</a>
-					<a class="dropdown-content" href="#">When</a>
-					<a class="dropdown-content" href="#">Where</a>
-					<a class="dropdown-content" href="#">Why</a>
-					<a class="dropdown-content" href="#">Who</a>
-					<a class="dropdown-content" href="#">How</a>
+				<div class="dropdown-content-5w1h">
+					<a href="#">What</a>
+					<a href="#">When</a>
+					<a href="#">Where</a>
+					<a href="#">Why</a>
+					<a href="#">Who</a>
+					<a href="#">How</a>
 				</div>
 		</div>
 	</nav>		
