add dropdown grammar content, reset button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ You can click each character on the tables and check you recognize hiragana to t
 <div class="category-container">
 	<div>
 		<ul>
-			<li><a class="greetings">Greetings</a></li>
+			<li><a class="greetings" id="greetings">Greetings</a></li>
 			<li><a class=""></a></li>
 			<li><a class=""></a></li>
 		</ul>
