--- a/index.html
+++ b/index.html
@@ -26,26 +26,25 @@
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Hiragana</a></li>
 			<li><a href="#">Katakana</a></li>
-		</ul>
-		<div class="nav-dropdown">
-			<a class="nav-grammar" href="#">Grammar</a>
-				<div class="dropdown-content-grammar">
-					<a href="">N1</a>
-					<a href="">N2</a>
-					<a href="">N3</a>					
-					<a href="">N4</a>
-					<a href="">N5</a>
-				</div>
-			<a class="nav-5w1h" href="#">5W1H</a>
-				<div class="dropdown-content-5w1h">
-					<a href="#">What</a>
-					<a href="#">When</a>
-					<a href="#">Where</a>
-					<a href="#">Why</a>
-					<a href="#">Who</a>
-					<a href="#">How</a>
-				</div>
-		</div>
+			
+			<li><a class="nav-grammar" href="#">Grammar</a></li>
+				<ul class="dropdown-content-grammar">
+					<li><a href="">N1</a></li>
+					<li><a href="">N2</a></li>
+					<li><a href="">N3</a></li>			
+					<li><a href="">N4</a></li>
+					<li><a href="">N5</a></li>
+				</ul>
+			<li><a class="nav-5w1h" href="#">5W1H</a></li>
+				<ul class="dropdown-content-5w1h">
+						<li><a href="#">What</a></li>
+						<li><a href="#">When</a></li>
+						<li><a href="#">Where</a></li>
+						<li><a href="#">Why</a></li>
+						<li><a href="#">Who</a></li>
+						<li><a href="#">How</a></li>
+				</ul>
+		</ul>	
 	</nav>		
 </header>
 
@@ -85,8 +84,8 @@ You can click each character on the tables and check you recognize hiragana to t
 <!--Disply user input-->
 <div class="answer-section-container">
 	<div class="answer">
-		<p class="default-message">Find Hiragana Characters!</p>
-		<p class="hiraganaOutput"></p>
+		<p class="spelling-answer"></p>
+		<p class="output-area">Your Output Here!</p>
 	</div>
 	<button class="reset-button" id="reset-button">Reset</button>
 	<button class="answer-button" id="answer-button">Answer</button>
